[S047]: implement production professional dashboard
